[gd_scene load_steps=2 format=3 uid="uid://bq1k1jd1eh6jv"]

[ext_resource type="Script" uid="uid://djgjet2mhmyn2" path="res://ui/start_screen/loading_screen.gd" id="1_xx47n"]

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xx47n")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
use_top_left = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ConnectionStatus" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Connecting..."
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15
alignment = 1
metadata/_edit_group_ = true

[node name="PlayOffline" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Play offline"

[node name="TryAgain" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Try again
"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/PlayOffline" to="." method="_on_play_offline_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonContainer/TryAgain" to="." method="_on_try_again_pressed"]
